add user and car controller and service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,9 @@
 spring.data.mongodb.uri=mongodb+srv://admin:b1PNtJjWsWIHe1mF@cluster0.b4x20kv.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=autoWebMongoDB
 server.port=8080
+
+# File storage configuration
+access.key.id=AKIAZVCJNJJUBRPTBJGB
+access.key.secret= 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
+s3.region.name=us-east-2
+s3.bucket.name=autowebs3
