add aws s3 and tested connection

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.database=autoWebMongoDB
 server.port=8080
 
 # File storage configuration
-access.key.id=AKIAZVCJNJJUBRPTBJGB
-access.key.secret= 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
-s3.region.name=us-east-2
-s3.bucket.name=autowebs3
+aws.s3.accessKey=AKIAZVCJNJJUBRPTBJGB
+aws.s3.secretKey= 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
+aws.s3.region=us-east-2
+aws.s3.bucketName=autowebs3
