--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,10 @@ spring.data.mongodb.uri=mongodb+srv://admin:b1PNtJjWsWIHe1mF@cluster0.b4x20kv.mo
 spring.data.mongodb.database=autoWebMongoDB
 server.port=8080
 
+# File size setup
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # File storage configuration
 aws.s3.accessKey=AKIAZVCJNJJUBRPTBJGB
 aws.s3.secretKey= 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
